# Phi-2-FineTuning

./: .gitignore  README.md  main.py  phi-2-finetuning.ipynb  pyproject.toml
