[project]
name = "phi-2-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "einops>=0.8.1",
    "peft>=0.15.2",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "trl>=0.18.1",
]
